Fix scrollbars

--- a/frontend/src/app/component/content/modul/task/task.component.scss
+++ b/frontend/src/app/component/content/modul/task/task.component.scss
@@ -3,8 +3,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin-top: 15px;
-  margin-left: 25px;
+  padding-top: 15px;
+  padding-left: 25px;
 }
 
 .breadcrumb {
