--- a/frontend/src/app/component/content/profile/profile.component.scss
+++ b/frontend/src/app/component/content/profile/profile.component.scss
@@ -1,7 +1,7 @@
 .title {
   font-size: 25px;
   font-weight: 500;
-  margin: 25px;
+  padding: 25px;
 }
 
 .container {
